Minor Tweaks in scripts and Deepchecks notebook

--- a/src/tests/test_deepchecks.ipynb
+++ b/src/tests/test_deepchecks.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install deepchecks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "ename": "",
