Issue "missing-closing-MD-text" Resolved

--- a/notebooks/MusicExpress.ipynb
+++ b/notebooks/MusicExpress.ipynb
@@ -27,25 +27,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [],
-      "source": [
-        "import sys\n",
-        "if sys.version_info[0:2] != (3, 11):\n",
-        "    raise Exception('Requires python 3.11.5')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9WY65BvZTUsD",
-        "outputId": "0a493935-5371-47f0-9fba-8125f5568888"
-      },
       "outputs": [],
       "source": [
         "%%capture\n",
@@ -61,17 +44,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "id": "1gd2FBR9NnKi"
-      },
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
+        "import sys\n",
+        "if sys.version_info[0:2] != (3, 11):\n",
+        "    raise Exception('Requires python 3.11.5')\n",
         "import spotipy\n",
         "import spotipy.oauth2 as oauth2\n",
         "from spotipy.oauth2 import SpotifyOAuth\n",
         "from spotipy.oauth2 import SpotifyClientCredentials\n",
-        "\n",
         "import sklearn\n",
         "import time\n",
         "import math\n",
@@ -82,11 +65,9 @@
         "import plotly.express as px\n",
         "import matplotlib.pyplot as plt\n",
         "from IPython.display import clear_output\n",
-        "\n",
         "from sklearn.metrics import silhouette_score\n",
         "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV\n",
         "from sklearn_extra.cluster import KMedoids\n",
-        "\n",
         "from yellowbrick.cluster import KElbowVisualizer, SilhouetteVisualizer"
       ]
     },
@@ -98,6 +79,13 @@
       "source": [
         "# **Variables Needed in the Notebook**"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IJJtboZBoLJS"
+      },
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -40845,6 +40833,13 @@
         "  print(str(x+1) + \"° Track: \" + recommendations[x]['Name'] + \" - Artist: \" + recommendations[x]['Artist'])\n",
         "  print(\"Preview: \", recommendations_links[x])\n",
         "print(\"========================================================================================================================================\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "As demonstrated in the preceding cell, the system successfully generated song recommendations based on the computed clusters. For each recommended song, a preview link is obtained (when available), allowing users to have an initial listen to the suggestions."
       ]
     }
   ],
