Added README for Deepchecks Data Drifts

--- a/src/tests/test_deepchecks.ipynb
+++ b/src/tests/test_deepchecks.ipynb
@@ -18,6 +18,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install deepchecks"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -141,8 +150,7 @@
     "import pandas as pd\n",
     "import os\n",
     "from deepchecks.tabular import Dataset\n",
-    "from deepchecks.tabular.suites import data_integrity\n",
-    "%pip install deepchecks\n"
+    "from deepchecks.tabular.suites import data_integrity"
    ]
   },
   {
@@ -160,15 +168,29 @@
    "source": [
     "current_directory = os.getcwd()\n",
     "current_directory = os.path.dirname(current_directory)\n",
-    "curr_dir_path = os.path.dirname(current_directory)\n",
-    "\n",
+    "curr_dir_path = os.path.dirname(current_directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Raw Data\n",
     "train_data_directory = curr_dir_path + '\\\\data\\\\interim\\\\keep grinding..csv'\n",
     "test_data_directory = curr_dir_path + '\\\\data\\\\interim\\\\Spotify\\'s Most Played All-Time [Updated Weekly]  Most Streamed  Top Played  500Mil+.csv'\n",
     "\n",
     "TRAIN_REPORT_PATH = curr_dir_path + '\\\\reports\\\\deepchecks\\\\QA_suite_training_report.html'\n",
-    "TEST_REPORT_PATH = curr_dir_path + '\\\\reports\\\\deepchecks\\\\QA_suite_test_report.html'\n",
-    "\n",
+    "TEST_REPORT_PATH = curr_dir_path + '\\\\reports\\\\deepchecks\\\\QA_suite_test_report.html'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Processed Data\n",
     "processed_train_data_directory = curr_dir_path + '\\\\data\\\\processed\\\\trainSet.csv'\n",
     "processed_test_data_directory = curr_dir_path + '\\\\data\\\\processed\\\\testSet.csv'\n",
