--- a/src/tests/DataDrift/deepchecks_datadrift.ipynb
+++ b/src/tests/DataDrift/deepchecks_datadrift.ipynb
@@ -250,8 +250,8 @@
    "source": [
     "The simplest drift detection method involves assessing one variable at a time. Measures like Kolmogorov-Smirnov test, Jensen-Shannon Divergence, etc., are used to gauge differences between newer and older samples of the variable. In deepchecks, optimal results are obtained with:\n",
     "\n",
-    "- For continuous numeric distributions: Kolmogorov-Smirnov statistic or Wasserstein metric (Earth Movers Distance)\n",
-    "- For discrete or categorical distributions: Cramer’s V or Population Stability Index (PSI)\n",
+    "- For continuous numeric distributions: Kolmogorov-Smirnov statistic or Wasserstein metric (Earth Movers Distance);\n",
+    "- For discrete or categorical distributions: Cramer’s V or Population Stability Index (PSI).\n",
     "\n",
     "While these methods offer simplicity and explainable results, they check each feature individually and may miss drift in feature relationships."
    ]
